// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tags reducers add tags 1`] = `
{
  "_internal": {},
  "items": [
    {
      "id": 1,
      "name": "current_fake_name",
    },
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
    {
      "id": 3,
      "name": "new_fake_name",
    },
    {
      "id": 4,
      "name": "other_new_fake_name",
    },
  ],
  "meta": {},
}
`;

exports[`tags reducers cancel edit tag 1`] = `
{
  "_internal": {},
  "items": [
    {
      "id": 1,
      "name": "current_fake_name",
    },
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
  ],
  "meta": {
    "1": {
      "edit": false,
    },
  },
}
`;

exports[`tags reducers create tag 1`] = `
{
  "_internal": {
    "creating": true,
  },
  "items": [],
  "meta": {},
}
`;

exports[`tags reducers create tag 2`] = `
{
  "_internal": {
    "creating": false,
  },
  "items": [
    {
      "foo": "bar",
      "id": 1,
    },
  ],
  "meta": {},
}
`;

exports[`tags reducers create tag 3`] = `
{
  "_internal": {
    "creating": false,
  },
  "items": [],
  "meta": {},
}
`;

exports[`tags reducers edit tag 1`] = `
{
  "_internal": {},
  "items": [
    {
      "id": 1,
      "name": "current_fake_name",
    },
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
  ],
  "meta": {
    "1": {
      "edit": true,
    },
  },
}
`;

exports[`tags reducers fetch tag list 1`] = `
{
  "_internal": {
    "pagination": {
      "page": 1,
    },
  },
  "items": [
    {
      "id": 3,
      "name": "new_fake_name",
    },
    {
      "id": 4,
      "name": "other_new_fake_name",
    },
  ],
  "meta": {},
}
`;

exports[`tags reducers remove tag 1`] = `
{
  "_internal": {},
  "items": [
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
  ],
  "meta": {},
}
`;

exports[`tags reducers save tag 1`] = `
{
  "_internal": {},
  "items": [
    {
      "id": 1,
      "name": "edited_name",
    },
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
  ],
  "meta": {
    "1": {
      "edit": false,
    },
  },
}
`;

exports[`tags reducers select all tags 1`] = `
{
  "_internal": {
    "selectAll": true,
  },
  "items": [
    {
      "id": 1,
      "name": "current_fake_name",
    },
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
  ],
  "meta": {
    "1": {
      "selected": true,
    },
    "2": {
      "selected": true,
    },
  },
}
`;

exports[`tags reducers select tag 1`] = `
{
  "_internal": {},
  "items": [
    {
      "id": 1,
      "name": "current_fake_name",
    },
    {
      "id": 2,
      "name": "other_current_fake_name",
    },
  ],
  "meta": {
    "1": {
      "selected": true,
    },
  },
}
`;
